# opengl_workbench

./: .gitignore  CMakeLists.txt  main.cpp
include/glad/: glad.h
src/: glad.c
